--- a/LibraryManager/MainWindow.xaml
+++ b/LibraryManager/MainWindow.xaml
@@ -1,12 +1,34 @@
-﻿<Window x:Class="LibraryManager.MainWindow"
+﻿<Window x:Name="MainMenu" x:Class="LibraryManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LibraryManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Library Manager" Height="301.819" Width="534.545" ResizeMode="CanMinimize">
+    <Grid x:Name="MainGrid" HorizontalAlignment="Left" Width="525" Height="263" VerticalAlignment="Top">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="13*" />
+            <ColumnDefinition Width="62*" />
+        </Grid.ColumnDefinitions>
+        <Grid x:Name="ButtonsGrid" HorizontalAlignment="Left" Height="263" VerticalAlignment="Top" Width="91">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Button x:Name="InventoryButton" Content="Inventory" HorizontalAlignment="Center" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Padding="0" />
+            <Button x:Name="CustomersButton" Content="Customers" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Padding="0" />
+            <Button x:Name="SellButton" Content="Sell Items" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="91" Height="33" FontSize="16" />
+            <Button x:Name="ReportsButton" Content="Reports" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" />
+            <Button x:Name="OptionsButton" Content="Options" HorizontalAlignment="Center" Grid.Row="7" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" />
+            <Button x:Name="LendButton" Content="Lend Items" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Width="91" Height="33" FontSize="16" Padding="0" />
+        </Grid>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="This is where the monthly reports will be" VerticalAlignment="Top" />
     </Grid>
 </Window>
