Added options window and some customisability settings

--- a/LibraryManager/MainWindow.xaml
+++ b/LibraryManager/MainWindow.xaml
@@ -22,12 +22,12 @@
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <Button x:Name="InventoryButton" Content="Inventory" HorizontalAlignment="Center" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Padding="0" />
-            <Button x:Name="CustomersButton" Content="Customers" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Padding="0" />
-            <Button x:Name="SellButton" Content="Sell Items" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="91" Height="33" FontSize="16" />
-            <Button x:Name="ReportsButton" Content="Reports" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" />
-            <Button x:Name="OptionsButton" Content="Options" HorizontalAlignment="Center" Grid.Row="7" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" />
-            <Button x:Name="LendButton" Content="Lend Items" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Width="91" Height="33" FontSize="16" Padding="0" />
+            <Button x:Name="InventoryButton" Content="Inventory" HorizontalAlignment="Center" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Padding="0" Click="InventoryButtonClick" Margin="-1" BorderBrush="#FFDDDDDD" />
+            <Button x:Name="CustomersButton" Content="Customers" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Padding="0" Click="CustomersButtonClick" Margin="-1" BorderBrush="#FFDDDDDD" />
+            <Button x:Name="SellButton" Content="Sell Items" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Click="SellButtonClick" BorderBrush="#FFDDDDDD" />
+            <Button x:Name="ReportsButton" Content="Reports" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Click="ReportsButtonClick" BorderBrush="#FFDDDDDD" />
+            <Button x:Name="OptionsButton" Content="Options" HorizontalAlignment="Center" Grid.Row="7" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Click="OptionsButtonClick" BorderBrush="#FFDDDDDD" />
+            <Button x:Name="LendButton" Content="Lend Items" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Width="91" Height="33" FontSize="18" Padding="0" Click="LendButtonClick" BorderBrush="#FFDDDDDD" />
         </Grid>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="This is where the monthly reports will be" VerticalAlignment="Top" />
     </Grid>
