--- a/LibraryManager/InventoryWindow.xaml
+++ b/LibraryManager/InventoryWindow.xaml
@@ -16,15 +16,6 @@
             <TextBlock Foreground="#FFDDDDDD" FontSize="14" Text="Search items:" Width="92" Padding="5,0,0,0" Margin="0,4,0,2" />
             <TextBox x:Name="SearchBox" Width="150" Margin="0,3" BorderThickness="0" Padding="0" VerticalAlignment="Stretch" Foreground="#FFF1F1F1" BorderBrush="{x:Null}" Background="#FF434346" TextChanged="SearchBox_TextChanged" />
         </ToolBar>
-        <DataGrid x:Name="InventoryDataGrid" Grid.Row="1" Background="#FF434346" BorderBrush="{x:Null}" Foreground="#FF3E3E40">
-            <DataGrid.Columns>
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Foreground="#FFDDDDDD" Header="Title" />
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Foreground="#FFDDDDDD" Header="Author" />
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Publisher" Foreground="#FFDDDDDD" />
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Foreground="#FFDDDDDD" Header="Item Type" />
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Foreground="#FFDDDDDD" Header="ISBN" />
-                <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Stock" Foreground="#FFDDDDDD" />
-            </DataGrid.Columns>
-        </DataGrid>
+        <DataGrid x:Name="InventoryDataGrid" Grid.Row="1" Background="#FF434346" BorderBrush="{x:Null}" Foreground="#FF2D2D30" AlternatingRowBackground="LightGray" AlternationCount="2" CanUserReorderColumns="False" IsTextSearchEnabled="True" IsReadOnly="True" />
     </Grid>
 </Window>
