--- a/LibraryManager/InventoryWindow.xaml
+++ b/LibraryManager/InventoryWindow.xaml
@@ -13,8 +13,11 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <ToolBar x:Name="InventoryToolBar" ToolBarTray.IsLocked="True" Margin="0" ScrollViewer.VerticalScrollBarVisibility="Disabled" Foreground="{x:Null}" Background="#FF2D2D30" Padding="0" Loaded="InventoryToolBar_Loaded">
-            <TextBlock Foreground="#FFDDDDDD" FontSize="14" Text="Search items:" Width="92" Padding="5,0,0,0" Margin="0,4,0,2" />
+            <TextBlock Foreground="#FFDDDDDD" FontSize="14" Text="Search items:" Width="92" Padding="5,0,0,0" Margin="0,5,0,3" />
             <TextBox x:Name="SearchBox" Width="150" Margin="0,3" BorderThickness="0" Padding="0" VerticalAlignment="Stretch" Foreground="#FFF1F1F1" BorderBrush="{x:Null}" Background="#FF434346" TextChanged="SearchBox_TextChanged" />
+            <Separator Margin="4,2,0,2" />
+            <Button x:Name="AddItemButton" Content="Add new item" Foreground="#FFDDDDDD" FontSize="14" Style="{StaticResource DarkButtonStyle}" Margin="4,3" Click="AddItemButton_Click" />
+            <Button x:Name="StockItemButton" Content="Stock selected item" Foreground="#FFDDDDDD" Style="{StaticResource DarkButtonStyle}" FontSize="14" Margin="4,3,0,3" Click="StockItemButton_Click" />
         </ToolBar>
         <DataGrid x:Name="InventoryDataGrid" Grid.Row="1" Background="#FF434346" BorderBrush="{x:Null}" Foreground="#FF2D2D30" AlternatingRowBackground="LightGray" AlternationCount="2" CanUserReorderColumns="False" IsTextSearchEnabled="True" IsReadOnly="True" />
     </Grid>
